test_src/compiler_errors/methods/MethodCallError1.b
class MethodCallError1 {
    void foo(Int value) {
        println(0);
    }
    
    void test() {
        foo();
    }
}
